# mustard

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  MUSTARD-COMMANDS.md  NOTICE.md  README.md  TUTORIAL.md  ajuste-mustard-git.md  curso-mustard.html  install.ps1  mustard.json  package.json  pnpm-lock.yaml  tmp-debug-clusters.js  tmp-debug2.js
.claude/: .detect-cache.json  .docs-audit.json  .knowledge-seen.json  .memory-seen.json  .scan-dispatch.json  CLAUDE.md  entity-registry.json  grain.model.json  knowledge.json  mustard.json  pipeline-config.md  settings.json  settings.local.json
.claude.backup.2026-04-14T20-27-42/: .knowledge-seen.json  knowledge.json  settings.json
.claude.backup.2026-04-14T20-27-42/.metrics/: bash-native-redirect.jsonl  budget-check.jsonl  budget-observations.jsonl  tool-use-counter.jsonl
.claude.backup.2026-04-14T20-27-42/.pipeline-states/: 2026-04-09-analyze-validator.metrics.json  2026-04-09-budget-gate-enforcement.metrics.json  2026-04-09-budget-observability.metrics.json  (+8 more)
.claude.backup.2026-04-16T07-42-48/: .knowledge-seen.json  entity-registry.json  knowledge.json  pipeline-config.md
.claude/.harness/: .phase-cache.json  (+1 more)
docs/: DETECCAO-DE-STACK-MULTISSINAL.md  MODULAR-ARCHITECTURE-GAP.md  NEXT-SESSION-FUNCTIONAL.md  NEXT-SESSION.md  REDESENHO-INDICE-DIGEST-AGNOSTICO.md  REFACTOR-AUDIT.md  RETORNO-CAMPO-SIALIA-FEATURE.md  ROADMAP-PRODUTO-VENDAVEL.md  SCAN-ESPECIALIZACAO-AGNOSTICA.md  SCAN-FIXES-PLAN.md  SPEC-LEXICO-AUTO-ENRIQUECIDO.md  mcp-tools.md  runtime-migration.md  upgrade-to-2.0.md
packaging/: build-packages.ps1
templates/: CLAUDE.md  pipeline-config.md  settings.json
(+1136 files in other folders)
